# Minishell

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.es.md  README.md  asdf  diagrama_proyecto.md  leak_env_grep  leak_env_pipe_grep_str  minishell  out  output.txt  readline.supp  settings.json  test.sh  test_builtins.sh  test_echo_chars_escape.sh  tester_mini.sh
borrador/: comannd.c
borrador/input/: free_errors.c  get_input.c  paths.c
docs/: builtins_test_guide.md  evaluation_checklist.md  evaluation_points_guide.md  features_minishell.md  heredoc_flow.md  heredoc_notas.md  signals_flow.md  technical_notes.md
includes/: free_structs.h  macros.h  minishell.h  parsing.h  prototype.h
libft/: Makefile  ft_bzero.c  ft_calloc.c  ft_itoa.c  ft_lstclear_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strchr_c.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strnstr.c  ft_strrchr_c.c  get_next_line_utils.c  libft.h
scripts/: pipes_test.sh  run_eval_tests.sh
src/: built_ins_main.c  env.c  env_list.c  esquema_functions_src.md  ft_string_utils.c  init_structs.c  input.c  minishell.c
src/built-ins-1/: built-in_export.c  built-in_utils.c
src/built_ins_1/: built_in_export.c  built_in_unset.c  built_in_utils.c  builtin_echo.c  builtin_part_one_utils.c  builtins_part_one_utils.c  export_utils.c
src/built_ins_2/: builtin_cd.c  builtin_cd_utils.c  builtin_exit.c  builtin_exit_utils.c  builtin_pwd.c
src/builtins_part02/: builtin_cd.c  builtin_pwd.c
src/commands/: cases_input.txt  cmd_args.c  cmd_builtins.c  cmd_errors.c  cmd_free.c  cmd_init.c  cmd_init_utils.c  cmd_list.c  errors_commands.c  init_commands.c  print_cmd.c
src/env/: env.c  env_list.c  env_locals.c  env_locals_list.c  env_locals_utils.c  env_utils.c  env_utils_locals.c  free_env.c  init_env_list.c
src/execute/: README.md  exce_cmd.c  exce_cmd_type.c  exce_cmd_utils.c  exce_errors.c  exce_init.c  exce_paths.c  exce_pipeline.c  exce_pipeline_child.c  exce_pipes.c  exce_type.c  exce_utils.c  excec_errors.c  excec_pipeline.c  free_errors.c  get_input.c  main.c  paths.c  process_execution.c  tests.c
src/expand/: expand_env.c  expand_func.c  expand_merge.c  expand_split.c  expand_token_utils.c  expand_utils.c  expand_vars.c
src/free/: free_cmd.c  free_env.c  free_exec.c  free_mini.c  free_redir.c  free_split.c  free_tokens.c
src/input/: get_input.c  input.c  paths.c  tests.c
src/mini/: env_setup.c  init_minishell.c  init_struct.c
src/parse/: parse_syntax.c  parse_syntax_args.c  parse_syntax_utils.c
src/parser/: parser_borrador.c  parser_check_quotes_dollar.c  parser_count_dollar.c  parser_errors.c  parser_expand_cases.c  parser_expand_dollar.c  parser_expand_utils.c  parser_handle_not_expand.c  parser_init_quotes.c  parser_input.c  parser_not_expand.c  parser_not_expand_utils.c  parser_syntax.c  parser_syntax_dollar.c  parser_syntax_expand.c  parser_syntax_quotes.c  parser_syntax_utils.c  parser_tab.c  parser_tokens.c  parser_utils.c  utils.c
src/pipe/: free_errors.c  get_input.c  tests.c
src/redir/: README.md  heredoc.c  redir_expand.c  redir_file.c  redir_init.c  redir_syntax.c  redir_utils.c  redis.md
src/signals/: signals.c  signals_utils.c
src/tokenize/: check_syntax_01.c  token_free.c  token_list.c  token_split.c  token_type.c  token_utils.c  token_utils_quotes.c  token_utils_split.c  token_utils_word_count.c  tokenize_input.c
test_functions/: a.out  access.c  add_history.c  chdir.c  exit.c  fgets.c  getcwd.c  rl_redisplay.c  rl_replace_line.c  sigaction.c  signal.c
test_functions_subject/: access.c  archivo.txt  fork.c  fstat.c  kill.c  lstat.c  open.c  rl_clear_history.c  rl_on_new_line.c  signal.c  stat.c
testing/: set_up_functions.c  setup_testing.c  test_double_quotes.c  test_main.c  test_remove_quotes.c  test_split.c  testing.h  unity.c
tests/: basic_cases.md  test_main.c  unity.c  unity_internals.h
utils/: parsing.h
